2012-06-13  David Shaw  <dshaw@jabberwocky.com>

	* paperkey.1: Internet is capitalized.

	* restore.c (restore): Fix problem with missing sigs on
	regenerated key.

2009-10-15  David Shaw  <dshaw@jabberwocky.com>

	* NEWS, configure.ac: Post-release commit.

2009-10-14  David Shaw  <dshaw@jabberwocky.com>

	* NEWS, configure.ac: Preparing 1.2 release.

	* paperkey.c (main): Force the umask to go-rwx, as we are going to
	be creating files that contain secret key material.

	* paperkey.1, paperkey.c (main, usage): Add -o as alias to
	--output, and document -h (help), -V (version), and -v (verbose).

	* README: Clarify how to build a 32-bit/64-bit OSX universal
	binary.

2009-02-10  David Shaw  <dshaw@jabberwocky.com>

	* NEWS, configure.ac: Post-release commit.

	* NEWS, configure.ac: Preparing 1.1 release.

	* paperkey.1: Don't mention the README file.  It's not really
	necessary here, and not all platfoms install it.  Noted by Todd
	Zullinger.

	* output.c (output_file_format, output_start): Some file format
	documentation tweaks.

2009-01-27  David Shaw  <dshaw@jabberwocky.com>

	* paperkey.c (main): Properly set up stdin to be in binary mode on
	Win32.

2009-01-22  David Shaw  <dshaw@jabberwocky.com>

	* NEWS, configure.ac: Post-release commit.

	* README: Update.

	* configure.ac: Preparing 1.0 release.

2009-01-16  David Shaw  <dshaw@jabberwocky.com>

	* paperkey.c (main): --version strings from autoconf.

	* configure.ac: autoupdate, and some m4 magic so we can propagate
	the copyright line into config.h.

	* paperkey.spec.in: Borrow some RPM-fu from the Fedora RPM by Todd
	Zullinger.

	* output.c (output_file_format): Clarify we're all big endian
	here.  Noted by Frédéric Brière.

2009-01-14  David Shaw  <dshaw@jabberwocky.com>

	* Makefile.am: Autogenerate paperkey.txt from paperkey.1 when
	cross compiling.

	* configure.ac, Makefile.am: Don't run selftest when cross
	compiling.

	* Makefile.am: When cross compiling for Win32, add README.WIN32, a